create parameter bindings for dynamic values in new assertions